# sps_genai

./: .gitignore  Dockerfile  data_loader.py  docker-compose.yml  generator.py  main.py  model.py  pyproject.toml  test_cnn.ipynb  test_vae.ipynb  train_mnist_gan.py  train_models.py  trainer.py  utils.py
app/: bigram_model.py  diffusion_model.py  embedding_model.py  energy_model.py  rnn_model.py
checkpoints/: energy_model.pth
helper_lib/: checkpoints.py  data_loader.py  evaluator.py  generator.py  model.py  trainer.py
