[project]
name = "sps-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "spacy>=3.8.14",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.20",
]
